# ChatGPT-bash-shell

./: Dockerfile  README.md  cert.pem  key.pem  openapi.yaml  pyproject.toml
.well-known/: ai-plugin.json
gpt_bash/: main.py
