[tool.poetry]
name = "gpt-bash"
version = "0.1.0"
description = ""
authors = ["Manolo Santos <manolo.santos@gmail.com>"]
readme = "README.md"
packages = [{include = "gpt_bash"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

